--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,7 +1,9 @@
-<% if post.errors.any? %>
-<h2><%= pluralize(post.errors.count, "error") %> prevented this post from being posted:</h2>
+<%= link_to 'Back', posts_path %>
+
+<% if @post.errors.any? %>
+<h2><%= pluralize(@post.errors.count, "error") %> prevented this post from being @ed:</h2>
 <ul>
-  <% post.errors.full_messages.each do |msg| %>
+  <% @post.errors.full_messages.each do |msg| %>
   <li><%= msg %></li>
   <% end %>
 </ul>
@@ -18,6 +20,6 @@
     <%= form.text_field :caption %>
   </div>
 
-  <%= form.button "Create post" %>
+  <%= form.button %>
 
 <% end %>
