--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,3 +1,28 @@
 // Place all the styles related to the posts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+.container {
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.post-container, .post-show-container {
+  display: grid;
+  justify-content: center;
+  margin: 1.25rem auto;
+}
+
+.post-image-caption-container, .post-show-image-container {
+  display: grid;
+}
+
+.post-image {
+  max-width: 300px; 
+  max-height: 300px;
+}
+
+.post-show-image {
+  max-width: 500px; 
+  max-height: 500px;
+}
