--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -10,7 +10,7 @@
 .post-container, .post-show-container {
   display: grid;
   justify-content: center;
-  margin: 1.25rem auto;
+  margin: 1rem auto;
 }
 
 .post-image-caption-container, .post-show-image-container {
@@ -25,4 +25,22 @@
 .post-show-image {
   max-width: 500px; 
   max-height: 500px;
+}
+
+.post-user-info {
+  display: inline-flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.post-icon {
+  margin-right: 1rem;
+	width: 1rem;
+}
+
+hr {
+  border: 0.5px solid #ececec;
+  width: 300px;
+  margin-top:1rem;
 }
