--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,3 +1,24 @@
-<h1>New post</h1>
+<h1>Create a post</h1>
 
-<%= render "form" %>
+<% if @post.errors.any? %>
+<h2><%= pluralize(@post.errors.count, "error") %> prevented this post from being @ed:</h2>
+<ul>
+  <% @post.errors.full_messages.each do |msg| %>
+  <li><%= msg %></li>
+  <% end %>
+</ul>
+<% end %>
+
+<%= form_with model: @post do |form| %>
+  <div>
+    <%= form.label :image%>
+    <%= form.file_field :image %>
+  </div>
+
+  <div>
+    <%= form.label :caption %>
+    <%= form.text_field :caption %>
+  </div>
+
+  <%= form.button %>
+<% end %>
