--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,9 +1,11 @@
-<footer class="footer">
-	<div class="footer-icons">
-		<%= link_to image_tag("icons8-home.svg", class: "icon"), posts_path  %>
-		<%= image_tag("icons8-search.svg", class: "icon") %>
-		<%= link_to image_tag("icons8-add-128.png", class: "icon"), new_post_path %>
-		<%= image_tag("icons8-heart-96.png", class: "icon") %>
-		<%= link_to image_tag("icons8-user-96.png", class: "icon") %>
+<% if current_user.present? %>
+	<footer class="footer">
+		<div class="footer-icons">
+			<%= link_to image_tag("icons8-home.svg", class: "icon"), posts_path  %>
+			<%= image_tag("icons8-search.svg", class: "icon") %>
+			<%= link_to image_tag("icons8-add-128.png", class: "icon"), new_post_path %>
+			<%= image_tag("icons8-heart-96.png", class: "icon") %>
+			<%= link_to image_tag("icons8-user-96.png", class: "icon"), user_path(current_user) %>
+		</div>
 	</div>
-</div>
+<% end %>
