--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,24 +1,26 @@
-<h1>Create a post</h1>
+  <div class="container centered-form">
+    <h2>Create a post</h2>
 
-<% if @post.errors.any? %>
-<h2><%= pluralize(@post.errors.count, "error") %> prevented this post from being @ed:</h2>
-<ul>
-  <% @post.errors.full_messages.each do |msg| %>
-  <li><%= msg %></li>
-  <% end %>
-</ul>
-<% end %>
+    <% if @post.errors.any? %>
+    <h2><%= pluralize(@post.errors.count, "error") %> prevented this post from being @ed:</h2>
+    <ul>
+      <% @post.errors.full_messages.each do |msg| %>
+      <li><%= msg %></li>
+      <% end %>
+    </ul>
+    <% end %>
 
-<%= form_with model: @post do |form| %>
-  <div>
-    <%= form.label :image%>
-    <%= form.file_field :image %>
+    <%= form_with model: @post do |form| %>
+      <div>
+        <%= form.label :image%>
+        <%= form.file_field :image %>
+      </div>
+
+      <div>
+        <%= form.label :caption %>
+        <%= form.text_field :caption %>
+      </div>
+
+      <%= form.button %>
+    <% end %>
   </div>
-
-  <div>
-    <%= form.label :caption %>
-    <%= form.text_field :caption %>
-  </div>
-
-  <%= form.button %>
-<% end %>
