--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,21 +1,21 @@
-<div class="container">
-    <h1>Edit post</h1>
+<div class="container centered-form">
+  <h2>Edit post</h2>
 
-<% if @post.errors.any? %>
-    <h2><%= pluralize(@post.errors.count, "error") %> prevented this post from being @ed:</h2>
-    <ul>
-    <% @post.errors.full_messages.each do |msg| %>
-    <li><%= msg %></li>
-    <% end %>
-    </ul>
-<% end %>
+  <% if @post.errors.any? %>
+      <h2><%= pluralize(@post.errors.count, "error") %> prevented this post from being @ed:</h2>
+      <ul>
+      <% @post.errors.full_messages.each do |msg| %>
+      <li><%= msg %></li>
+      <% end %>
+      </ul>
+  <% end %>
 
-<%= form_with model: @post do |form| %>
-  <div>
-    <%= form.label :caption %>
-    <%= form.text_field :caption %>
-  </div>
+  <%= form_with model: @post do |form| %>
+    <div>
+      <%= form.label :caption %>
+      <%= form.text_field :caption %>
+    </div>
 
-  <%= form.button %>
-<% end %>
+    <%= form.button %>
+  <% end %>
 </div>
